# SilentOTITHRanDouSha

./: Cargo.toml  build.rs
ane-local/: Cargo.toml
ane-local/examples/gpt2_forward/: compiled_model.rs  executables.rs  kv_cache.rs  main.rs  sampling.rs  session.rs
ane-local/examples/gpt2_forward/weights/: model_weights.rs
ane-local/src/: ane_in_memory_model_descriptor.rs  client.rs  executable.rs  io_surface.rs  lib.rs  request.rs  tensor_data.rs
ane-local/src/graph/: compile.rs  ops.rs
ane-local/src/ops/: dyn_conv.rs  layer_norm.rs  mil.rs  mod.rs  multi_output_ops.rs  op.rs  unary_ops.rs
benches/: protocol_bench.rs
src/: beaver.rs  beaver32.rs  error.rs  field.rs  field32.rs  field32_shamir.rs  inference.rs  lib.rs  mpc_distributed32.rs  mpc_primitives.rs  multiply.rs  network.rs  private_attention.rs  quantize.rs  randousha.rs  secure_nonlinear.rs  shamir.rs  silent_ot.rs
src/gpt2/: executables.rs  mod.rs  model.rs  private_session.rs  private_types.rs  sampling.rs  session.rs  weights.rs
src/gpt_oss/: config.rs  executables.rs  kv_cache.rs  mod.rs  model.rs  private_session.rs  rope.rs  session.rs  turboquant.rs  weights.rs
src/gpu/: mod.rs  moe_dispatch.rs  moe_shader.metal  shader.metal  shader32.metal
tests/: networked_integration.rs
