[package]
name = "silent-ot-randousha"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
