[package]
name = "silent-ot-randousha"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8" }
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"
objc = "0.2"
ane = { path = "ane-local" }
hf-hub = "0.5"
safetensors = "0.7"
tokenizers = "0.22"
half = "2"
serde_json = "1.0"
memmap2 = "0.9"

[[bin]]
name = "private-gpt2"
path = "src/bin/private_gpt2.rs"

[[bin]]
name = "private-gpt-oss"
path = "src/bin/private_gpt_oss.rs"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "protocol_bench"
harness = false
