[package]
name = "ane"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the Apple Neural Engine (ANE)"
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
thiserror = "2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-io-surface = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = "0.5"
safetensors = "0.7"
tokenizers = "0.22"
half = "2"
rand = "0.9"
